<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".view.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/activity_main_mainTB"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorAccent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_main_tweetUrlTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_mainTB">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_main_tweetUrlTIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tweet_url"
            android:inputType="textUri"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/activity_main_buttonsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_tweetUrlTIL">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_main_pasteUrlMBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/paste_url"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_main_downloadMBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/download"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/activity_main_radioGroupHSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_buttonsLL">

        <RadioGroup
            android:id="@+id/activity_main_mainRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_main_imageRB"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:checked="true"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/image"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/activity_main_videoGifRB"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/video_gif"
                android:textColor="@android:color/black" />

        </RadioGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_videoRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_radioGroupHSV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_imageRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_radioGroupHSV" />

</androidx.constraintlayout.widget.ConstraintLayout>